# ld53

./: .gitignore  .gitmodules  meson.build  test.sh
audio/: meson.build
shaders/: fragment.glsl  meson.build  text_vertex.glsl  vertex.glsl
src/: audio.c  audio.h  ecs.hpp  game.hpp  main.cpp  meson.build  opengl_utils.cpp  opengl_utils.hpp  physics_world.cpp  physics_world.hpp  renderer.cpp  renderer.hpp  scene_graph.cpp  scene_graph.hpp  the_game.cpp  the_game.hpp
textures/: character.xcf  house.xcf  meson.build
